Work in progress: event handling hook
